src/objects/Proposal_MA_Tasking__c.object
<CustomObject>
    <description>Created for MA Tasking List.</description>
    <fields>
        <fullName>Attribute_Description__c</fullName>
        <label>Attribute Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MA_Tasking_French_Product_Name__c</fullName>
        <label>MA Tasking French Product Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MA_Tasking_Item_Sequence__c</fullName>
        <label>MA Tasking Item Sequence</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MA_Tasking_Line_Number__c</fullName>
        <label>MA Tasking Line Number</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MA_Tasking_Name__c</fullName>
        <label>MA Tasking Name</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Name_or_Description__c</fullName>
        <description>Name or Description depending if name contains &apos;Annual Task&apos; or &apos;Operational Task&apos;.</description>
        <label>Name or Description</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Option_Code__c</fullName>
        <label>Option Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Option_Group__c</fullName>
        <label>Option Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ADDITION(S) AND/OR EXCEPTION(S):</fullName>
                </value>
                <value>
                    <fullName>Annual Inspection &amp; Re-Certification:</fullName>
                </value>
                <value>
                    <fullName>Annual Inspection:</fullName>
                </value>
                <value>
                    <fullName>Burners and Combustions / Boilers</fullName>
                </value>
                <value>
                    <fullName>Coils Services</fullName>
                </value>
                <value>
                    <fullName>Electric type *</fullName>
                </value>
                <value>
                    <fullName>Filters and Belts</fullName>
                </value>
                <value>
                    <fullName>Generic Tasks</fullName>
                </value>
                <value>
                    <fullName>High efficiency purge *</fullName>
                </value>
                <value>
                    <fullName>Indoor Unit - Annual Inspection</fullName>
                </value>
                <value>
                    <fullName>Indoor Unit - Operation Inspection</fullName>
                </value>
                <value>
                    <fullName>Note</fullName>
                </value>
                <value>
                    <fullName>Oil type *</fullName>
                </value>
                <value>
                    <fullName>Oil type boilers *</fullName>
                </value>
                <value>
                    <fullName>Operational Inspection:</fullName>
                </value>
                <value>
                    <fullName>Outdoor unit - Annual Inspection</fullName>
                </value>
                <value>
                    <fullName>Outdoor Unit - Operation Inspection</fullName>
                </value>
                <value>
                    <fullName>PRE-COOLING INSPECTION (Spring)- Seasonal Inspection</fullName>
                </value>
                <value>
                    <fullName>Predictive Maintenance</fullName>
                </value>
                <value>
                    <fullName>PRE-HEATING INSPECTION (Fall)- Seasonal Inspection</fullName>
                </value>
                <value>
                    <fullName>Preventative Maintenance</fullName>
                </value>
                <value>
                    <fullName>Propane &amp; natural gas type *</fullName>
                </value>
                <value>
                    <fullName>Propane &amp; natural gas type boilers *d</fullName>
                </value>
                <value>
                    <fullName>Purge System*</fullName>
                </value>
                <value>
                    <fullName>Seasonal Start-up</fullName>
                </value>
                <value>
                    <fullName>Starter Type*</fullName>
                </value>
                <value>
                    <fullName>Steam type *</fullName>
                </value>
                <value>
                    <fullName>Steam type boilers *</fullName>
                </value>
                <value>
                    <fullName>Tube Services - (Condenser/Evaporator)</fullName>
                </value>
                <value>
                    <fullName>Variable frequency drive(s) *</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Proposal_MA_Bundle__c</fullName>
        <label>Proposal MA Bundle</label>
        <referenceTo>Proposal_MA_Bundle__c</referenceTo>
        <relationshipLabel>Proposal MA Tasking</relationshipLabel>
        <relationshipName>Proposal_MA_Tasking</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Random_Number__c</fullName>
        <label>Random Number</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Task_Frequency__c</fullName>
        <label>Task Frequency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Hours__c</fullName>
        <label># of Hours</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Visits__c</fullName>
        <label># of Visits</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Proposal MA Tasking</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>MA_Tasking_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OBJECT_ID</columns>
        <columns>Attribute_Description__c</columns>
        <columns>Proposal_MA_Bundle__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>MATask-{000000000}</displayFormat>
        <label>Proposal MA Tasking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Proposal MA Tasking</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>